--- a/package.json
+++ b/package.json
@@ -2,23 +2,22 @@
   "name": "udacity-c2-image-filter",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "tsc": "tsc",
+    "dev": "ts-node-dev --inspect=0.0.0.0:8082 ./src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf www/ || true",
-    "build": "npm run clean && tsc && cp package.json www/package.json && mkdir www/tmp/ && cd www && zip -r Archive.zip . && cd ..",
-    "dev": "ts-node-dev --inspect=0.0.0.0:8082 ./src/server.ts"
+    "build": "npm run clean && tsc && cp .npmrc www/.npmrc && cp package.json www/package.json && mkdir www\\tmp && cd www && zip -r Archive.zip . && cd .."
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/grutt/udacity-c2-image-filter.git"
+    "url": "git+https://github.com/thiagoprochnow/udacity-course2-imagefilter-project.git"
   },
-  "author": "",
+  "keywords": [],
+  "author": "Thiago Prochnow",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/grutt/udacity-c2-image-filter/issues"
-  },
-  "homepage": "https://github.com/grutt/udacity-c2-image-filter#readme",
   "devDependencies": {
     "@types/bluebird": "^3.5.27",
     "@types/express": "^4.17.0",
@@ -28,8 +27,16 @@
     "typescript": "^3.5.3"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/email-validator": "^1.0.6",
+    "@types/jsonwebtoken": "^8.5.4",
+    "aws-sdk": "^2.958.0",
+    "bcrypt": "^5.0.1",
+    "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "jimp": "^0.16.1",
-    "rimraf": "^3.0.2"
+    "jsonwebtoken": "^8.5.1",
+    "rimraf": "^3.0.2",
+    "sequelize-typescript": "^2.1.0"
   }
 }
